...
            IconWithTextButton(
                icon = Icons.Filled.Download,
                text = stringResource(Res.string.offline_map_details_update),
                color = MaterialTheme.colorScheme.onSurface,
                modifier = Modifier
                    .defaultMinSize(minHeight = spacing.targetSize)
                    .testTag("offlineMapUpdate"),
                onClick = downloadExtract
            )
            IconWithTextButton(
                icon = Icons.Filled.Delete,
                text = stringResource(Res.string.offline_map_details_delete),
                color = MaterialTheme.colorScheme.onSurface,
                modifier = Modifier
                    .defaultMinSize(minHeight = spacing.targetSize)
                    .testTag("offlineMapDelete"),
                onClick = deleteExtract,
            )
        } else {
            IconWithTextButton(
                icon = Icons.Filled.Download,
                text = stringResource(Res.string.offline_map_details_download),
...
