...
    FlexibleAppBar(
        title = title,
        leftSide = {
            IconWithTextButton(
                text = navigationButtonTitle,
                color = MaterialTheme.colorScheme.onSurface,
                modifier = Modifier.testTag("appBarLeft")
            ) {
                onNavigateUp()
            }
        },
        rightSide = {
            if (rightButtonTitle.isNotEmpty()) {
...
