...
        },
        leftSide = {
            IconButton(
                onClick = onMenuClick,
                modifier = Modifier
                    .talkbackHint(stringResource(Res.string.ui_menu_hint))
                    .testTag("topBarMenu"),
            ) {
                Icon(
                    imageVector = Icons.Rounded.Menu,
                    contentDescription = stringResource(Res.string.ui_menu),
                    modifier = Modifier.semantics { heading() },
                )
...
