...
                NavigationButton(
                    onClick = { onNavigate(SharedRoutes.MARKERS_AND_ROUTES) },
                    text = stringResource(Res.string.search_view_markers),
                    horizontalPadding = spacing.small,
                    modifier = Modifier
                        .talkbackHint(stringResource(Res.string.search_button_markers_accessibility_hint))
                        .testTag("homeMarkersAndRoutes"),
                )
                if (fetchingLocation) {
                    var announceLoading by remember { mutableStateOf(false) }
                    LaunchedEffect(Unit) {
                        kotlinx.coroutines.delay(1500)
                        announceLoading = true
...
                                )

                                CardButton(
                                    onClick = { routeFunctions.stop() },
                                    imageVector = Icons.Filled.Stop,
                                    contentDescriptionId = Res.string.route_detail_action_stop_route,
                                    testTag = "routeStop",
                                )

                                if (showMap) {
                                    CardButton(
                                        onClick = { fullscreenMap.value = !fullscreenMap.value },
                                        imageVector = Icons.Rounded.Fullscreen,
...
