...
                        )
                    }
                    CustomButton(
                        Modifier
                            .fillMaxWidth()
                            .smallPadding()
                            .testTag("addWaypointsButton"),
                        onClick = { addWaypointDialog = true },
                        shape = RoundedCornerShape(spacing.small),
                        text = stringResource(Res.string.route_detail_edit_waypoints_button),
                        textStyle = MaterialTheme.typography.bodyLarge,
                        fontWeight = FontWeight.Bold,
                    )
...
                    ) {
                        CustomTextField(
                            fieldName = stringResource(Res.string.markers_sort_button_sort_by_name),
                            fieldHint = stringResource(Res.string.route_name_description_hint),
                            modifier = Modifier
                                .fillMaxWidth()
                                .testTag("routeName"),
                            value = uiState.name,
                            onValueChange = { holder.onNameChange(it) },
                            testTagPreFix = "name",
                        )
                        Spacer(modifier = Modifier.height(spacing.medium))
                        CustomTextField(
...
