...
        },
        rightSide = {
            Text(
                modifier = Modifier
                    .clickable(role = Role.Button) { onRightButton() }
                    .extraSmallPadding()
                    .testTag("flexibleAppBarRight"),
                text = rightButtonTitle,
                color = MaterialTheme.colorScheme.onSurface,
                style = MaterialTheme.typography.headlineSmall
            )
        }
    )
...
